--- a/TODO
+++ b/TODO
@@ -1,3 +1,5 @@
+ruby console - TODO                                         [2008-12-25]
+
 FUNCTIONALITY
 
   - colorize text
@@ -12,3 +14,5 @@ TODO
   - draw windows, buttons, etc.
   - library documentation !!1!eleven
   - anything else?
+
+ruby console - TODO                                                [EOF]
